--- a/css/phone.css
+++ b/css/phone.css
@@ -1,16 +1,22 @@
 @charset "UTF-8"; 
 body {
   color: white;
-  font-family: Verdana, Geneva, Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   padding:0px;
   margin:0px;
 }
-h1,h2,h3,h4,h5,h6,p,li {
+h1,h2,h3,p,li {
   margin-left: 15px;
   margin-top: 0px;
 }
+header ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    height: 20px;
+}
 #wrapper {
-    width: 100%;
+  width: 100%;
 }
 #right-column {
   width: 100%;
@@ -25,6 +31,7 @@ h1,h2,h3,h4,h5,h6,p,li {
 }
 #footer {
   height: 80px;
+  text-align: center;
   background-color: black;
 }
 #banner{
