--- a/css/full.css
+++ b/css/full.css
@@ -116,6 +116,8 @@ button {
     font-family: sans-serif;
     font-size:30px;
     text-align:center;
+}
+.animate{
     animation:move 5s infinite;
 }
 @keyframes move{
