--- a/css/phone.css
+++ b/css/phone.css
@@ -41,7 +41,7 @@ header ul {
 .box {
   width: 90%;
   min-height: 120px;
-  background-color: dark-red;
+  background-color: darkred;
   margin: 15px;
   opacity: 1;
 }
