--- a/css/phone.css
+++ b/css/phone.css
@@ -1,6 +1,7 @@
 @charset "UTF-8"; 
 body {
-  color: white;
+  background: #323a45;
+  color: #f6f7f9;
   font-family: 'Roboto', sans-serif;
   padding:0px;
   margin:0px;
@@ -10,10 +11,10 @@ h1,h2,h3,p,li {
   margin-top: 0px;
 }
 header ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    height: 20px;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  height: 20px;
 }
 #wrapper {
   width: 100%;
@@ -22,7 +23,7 @@ header ul {
   width: 100%;
   float: none;
   height: 1200px;
-  background-color: DarkOrange;
+  background-color: #778899;
 }
 #left-column {
   float: none;
@@ -32,31 +33,42 @@ header ul {
 #footer {
   height: 80px;
   text-align: center;
-  background-color: black;
+  background-color: #323a45;
 }
 #banner{
   height: 100px;
-  background-color: black;
+  background-color: #323a45;
 }
 .box {
   width: 90%;
   min-height: 120px;
-  background-color: darkred;
+  background-color: #5faeb6;
   margin: 15px;
   opacity: 1;
 }
+.label {
+  width: 90%;
+  min-height: 120px;
+  margin: 15px;
+  opacity: 1;
+}
+.icon {
+  display: block;
+  height: 35px;
+  width: 35px;
+}
 .button {
-  font-size:x-large;
-  text-decoration:none;
-  background-color:LightBlue;
-  display:block;
-  width:25%;
-  float:left;
-  padding:5px;
-  margin:5px;
-  border-radius:5px;
-  box-shadow:5px 5px 3px gray;
+  font-size: x-large;
+  text-decoration: none;
+  background-color: LightBlue;
+  display: block;
+  width: 25%;
+  float: left;
+  padding: 5px;
+  margin: 5px;
+  border-radius: 5px;
+  box-shadow: 5px 5px 3px gray;
 }
 .button:hover {
-  box-shadow:5px 5px 3px black;
+  box-shadow: 5px 5px 3px black;
 }
